<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/submenu_background"
    tools:context=".SettingsScreen">

    <RelativeLayout
        android:id="@+id/roundedSquare"
        android:layout_width="351dp"
        android:layout_height="286dp"
        android:layout_margin="16dp"
        android:background="?android:attr/colorActivatedHighlight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/centerLayout"
            android:layout_width="304dp"
            android:layout_height="268dp"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtDifficulty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/txtDifficultyText"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/rgDifficulty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbEasy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rbEasyText"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rbMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rbMediumText"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rbHard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rbHardText"
                    android:textColor="@color/black" />
            </RadioGroup>

            <Button
                android:id="@+id/btnBack"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="#2196F3"
                android:onClick="goBack"
                android:text="@string/btnBackText"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline6"
                app:layout_constraintVertical_bias="0.3" />

        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>